--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@sandstreamdev/react-swipeable-list": "^1.0.2",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-swipeable": "^7.0.2"
+    "react-dom": "^19.0.0"
   }
 }
